test/language/statements/using/syntax/block-scope-syntax-using-declarations-mixed-with-without-initializer.js
// Copyright (C) 2023 Ron Buckton. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
esid: pending
description: >
    using declarations mixed: with, without initializer
negative:
  phase: parse
  type: SyntaxError
features: [explicit-resource-management]
---*/

$DONOTEVALUATE();
{
  using x = null, y;
}
